# Messenger

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Interface/: IConnection.h  IMessenger.h
test/client/: Client.cpp  Client.h
test/client/ConnectionManager/: ConnectionManager.cpp  ConnectionManager.h
test/client/MessageManager/: MessageManager.cpp  MessageManager.h
test/server/: pyServ.py
